# micro-utils

./: .gitmodules  CMakeLists.txt  README.md
Driver/VL53L1X/core/: VL53L1X_api.h
Driver/VL53L1X/platform/: vl53l1_platform.c
benchmark/: CMakeLists.txt
include/micro/bsp/: adc.hpp  dma.hpp  gpio.hpp  i2c.hpp  it.hpp  mutex.hpp  queue.hpp  spi.hpp  task.hpp  tim.hpp  uart.hpp
include/micro/container/: aligned_storage.hpp  array.hpp  bit_array.hpp  bit_container.hpp  bit_grid.hpp  directory.hpp  infinite_buffer.hpp  map.hpp  pair.hpp  ring_buffer.hpp  set.hpp  span.hpp  vec.hpp  vector.hpp
include/micro/control/: LineController.hpp  PD_Controller.hpp  PID_Controller.hpp  maneuver.hpp  ramp.hpp
include/micro/debug/: DebugLed.hpp  ParamManager.hpp  SystemManager.hpp  TaskMonitor.hpp  params.hpp  serialize.hpp  taskMonitor.hpp
include/micro/format/: format.hpp
include/micro/hw/: DC_Motor.hpp  DcMotor.hpp  Encoder.hpp  HC_SR04_Ultrasonic.hpp  HD44780_Lcd.hpp  LSM6DS3_Gyroscope.hpp  LSM6DSO_Gyroscope.hpp  MPU9250_Gyroscope.hpp  Motor.hpp  RotaryEncoder.hpp  Servo.hpp  ServoMotor.hpp  SteeringServo.hpp  VL53L1X_DistanceSensor.hpp  lsm6dso_reg.h  vl53l1_platform.h  vl53l1_platform.hpp  vl53l1_types.h
include/micro/json/: json.hpp
include/micro/linalg/: eq_solver.hpp  linalg.hpp  line2.hpp
include/micro/log/: log.hpp
include/micro/math/: constants.hpp  eq_solver.hpp  linalg.hpp  line2.hpp  numeric.h  numeric.hpp  random_generator.hpp  unit_utils.hpp
include/micro/panel/: CanManager.hpp  DistSensorPanelData.hpp  LineDetectPanel.hpp  LineDetectPanelData.h  LineDetectPanelLink.hpp  LineDetectPanelLinkData.hpp  MotorPanel.hpp  MotorPanelData.h  MotorPanelLink.hpp  MotorPanelLinkData.hpp  Panel.hpp  PanelLink.hpp  handshake.hpp  line.h  lines.h  panelData.h  panelLink.h  panelVersion.h  panelVersion.hpp  vehicleCanTypes.hpp
src/: CanManager.cpp  CarProps.cpp  CarPropsSensor.cpp  DC_Motor.cpp  DcMotor.cpp  DebugLed.cpp  DistanceSensor.cpp  Encoder.cpp  HC_SR04_Ultrasonic.cpp  HD44780_Lcd.cpp  LSM6DS3_Gyroscope.cpp  LSM6DSO_Gyroscope.cpp  Line.cpp  LineController.cpp  LineDetectPanel.cpp  LinePattern.cpp  MPU9250_Gyroscope.cpp  MadgwickAHRS.cpp  MotorPanel.cpp  MotorSimulator.cpp  PID_Controller.cpp  ParamManager.cpp  RotaryEncoder.cpp  Servo.cpp  ServoMotor.cpp  SystemManager.cpp  TaskMonitor.cpp  VL53L1X_DistanceSensor.cpp  VL53L1X_api.c  VL53L1X_calibration.c  bit_container.cpp  bsp_HAL.cpp  bytes.cpp  common.cpp  convert.cpp  debug.cpp  handshake.cpp  json.cpp  linalg.cpp  log.cpp  (+24 more)
test/: CMakeLists.txt
test/src/: cfg_micro.hpp  trajectory.cpp  units.cpp  utest_carprops.cpp  utest_format.cpp  utest_log.cpp  utest_map.cpp  utest_numeric.cpp  utest_parammanager.cpp  utest_pid_controller.cpp  utest_ring_buffer.cpp  utest_set.cpp  utest_trajectory.cpp  utest_units.cpp  utest_vec.cpp  utest_vector.cpp  utils.hpp
(+60 files in other folders)
